--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airbnb",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ket00.gihub.io/app123",
+  "homepage": "https://ket00.gihub.io/airbnb",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
